--- a/start/lecture2_2/index.html
+++ b/start/lecture2_2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Your first THREE.js app</title>
+		<title>Keep Vision - 3D App content</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <!--favicon -->
